# NHF1

./: CMakeLists.txt  NHF Specifikáció Javított.docx  README.md  main.c  ~$F Specifikáció Javított.docx
structures/io/: file_operations.c  file_operations.h
structures/menu/: menu.c  menu.h
structures/resources/components/: components.c  components.h
structures/resources/string/: string.c  string.h
